{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "4ff44d5e-e446-4100-b08a-5a71e5d8a20f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "05680800-8ca7-425c-9827-a63a888147b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "fc8cf1f3-14c1-4276-b961-75685f85ae52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "[Axis] AD",
                    "id": "f5791271-0fba-4e97-8b35-a793fefc1a51",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "29e143b4-bdd5-40b3-aa1e-f1d671bd5266",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4d8ae534-9ee7-4565-a5c2-c9ecb9d32802",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "99dae31b-9e6d-4c07-b4d1-2f3d87e53e10",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}